pkg/provider/kubernetes/ingress/fixtures/2-ingresses-in-different-namespace-with-same-service-name_ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
    - host: traefik.tchouk
      http:
        paths:
          - path: /bar
            backend:
              service:
                name: service1
                port:
                  name: tchouk
            pathType: Prefix
          - path: /foo
            backend:
              service:
                name: service1
                port:
                  name: carotte
            pathType: Prefix

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: toto

spec:
  rules:
    - host: toto.traefik.tchouk
      http:
        paths:
          - path: /bar
            backend:
              service:
                name: service1
                port:
                  name: tchouk
            pathType: Prefix
